--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,17 +4,27 @@
     background-color: rgb(228, 224, 224);
 }
 body{
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 100%;
 }
+header{
+    width: 100%;
+    height: 43px;
+}
 main{
-    height: calc(100% - 26px);
+    height: calc(100%);
+}
+header nav{
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
 }
 div.menu{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 10px;
     margin-right: 10px;
     font-family: 'Barlow', sans-serif;
     font-size: 22px;
@@ -57,35 +67,5 @@ div.icon{
 div.icon a{
     color: rgb(100, 190, 220);
     margin-left: 20px;
-    margin-top: 10px;
     font-size: 28px;
-}
-div.main{
-    display: flex;
-    position: fixed;
-    margin-top: 200px;
-    margin-left: 45px;
-    width: 400px;
-    height: 100%;
-    font-family: 'Barlow', sans-serif;
-}
-div.perfil p{
-    font-weight: bold;
-    font-size: 20px;
-}
-div.perfil h3{
-    font-size: 44px;
-    color: rgb(65, 62, 62);
-}
-div.perfil h2{
-    font-size: 26px;
-    color: rgb(100, 190, 220);
-}
-div.img-perfil{
-    display: flex;
-    position: fixed;
-    left: 65%;
-    bottom: 200px;
-    width: 250px;
-    height: 300px;
 }
