--- a/css/about.css
+++ b/css/about.css
@@ -6,7 +6,7 @@ body{
     width: 100%;
     height: 100%;
     background-color: lightgrey;
-    background-image: linear-gradient(30deg, lightgrey, lightgrey, rgb(115, 170, 167),lightseagreen);
+    background-image: linear-gradient(30deg, lightgrey 15%, lightgrey 20%, rgb(115, 170, 167) 35%,lightseagreen 60%);
 }
 .container{
     display: grid;
@@ -57,3 +57,62 @@ body{
 #menu a:hover{
     border-bottom: 3px solid white;
     color: rgb(249, 252, 255);
+}
+#main{
+    display:flex;
+    justify-content:start;
+    flex-direction: column;
+    max-width: 763,31px;
+    max-height: 605,5px;
+    margin: 20px 5px 20px 20px;
+}
+#icon {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    max-width: 763,31px;
+    max-height: 605,5px;
+    width: 70%;
+    height: 60px;
+}
+#icon img{
+    margin: 5px 15px 5px 15px;
+    width: 40px;
+    height: 40px;
+}
+#icon img:hover{
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+}
+#image{
+    display: flex;
+    justify-content: end;
+    max-width: 763,31px;
+    max-height: 605,5px;
+    display: flex;
+    width: 100%;
+    height: 80%;
+}
+#img{
+    display: flex;
+    justify-content: end;
+    width: 100%;
+}
+#img img{
+    
+}
+#aside{
+    margin: 20px 20px 20px 5px;
+}
+#artigo{
+    color: rgb(44, 43, 43);
+    padding: 15px;
+    border: 3px solid black;
+    width: 805;
+    height: 77%;
+    margin: 50px 50px 0 20px;
+}
+span{
+    color: rgba(252, 252, 252, 0.822);
+}
