--- a/css/home.css
+++ b/css/home.css
@@ -6,7 +6,7 @@ body{
     width: 100%;
     height: 100%;
     background-color: lightgrey;
-    background-image: linear-gradient(30deg, lightgrey, lightgrey, rgb(115, 170, 167),lightseagreen);
+    background-image: linear-gradient(30deg, lightgrey 15%, lightgrey 20%, rgb(115, 170, 167) 35%,lightseagreen 60%);
 }
 .container{
     display: grid;
@@ -92,7 +92,9 @@ body{
     height: 30px;
 }
 #icon img:hover{
-    border: 0.1px solid lightgray;
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
 }
 #aside{
     grid-area: aside;
